#613270: 模板结构优化

--- a/react-ts-study/src/components/layout/index.less
+++ b/react-ts-study/src/components/layout/index.less
@@ -1,14 +1,28 @@
+@dark-color: #242424;
 
 .layoutCon{
     height: 100%;
     overflow: hidden;
-    .nav{
+    .hdr.ant-layout-header {
         width: 100%;
         height: 50px;
         border-bottom: 1px solid grey;
+        background-color: @dark-color;
         padding: 10px;
     }
     .mainCon{
         height: calc(100% - 50px);
+    }
+    .siderCon{
+        background-color: @dark-color;
+        border-right: 1px solid grey;
+    }
+    .siderCon p{
+        margin-left: 20px;
+    }
+    .mainContent{
+        // background-color: #f2f3f5;
+        background-color:  @dark-color;
+        padding: 16px;
     }
 }
