--- a/react-ts-study/src/components/layout/index.less
+++ b/react-ts-study/src/components/layout/index.less
@@ -1,5 +1,5 @@
 @dark-color: #242424;
-
+@white-color:#fff;
 .layoutCon{
     height: 100%;
     overflow: hidden;
@@ -7,22 +7,21 @@
         width: 100%;
         height: 50px;
         border-bottom: 1px solid grey;
-        background-color: @dark-color;
+        background-color: @white-color;
         padding: 10px;
     }
     .mainCon{
         height: calc(100% - 50px);
     }
     .siderCon{
-        background-color: @dark-color;
+        background-color: @white-color;
         border-right: 1px solid grey;
     }
     .siderCon p{
         margin-left: 20px;
     }
     .mainContent{
-        // background-color: #f2f3f5;
-        background-color:  @dark-color;
+        background-color:  @white-color;
         padding: 16px;
     }
 }
