--- a/react-ts-study/src/index.less
+++ b/react-ts-study/src/index.less
@@ -1,11 +1,9 @@
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
 
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    color-scheme: light;
+    // color: rgba(255, 255, 255, 0.87);
+    // background-color: #242424;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -47,7 +45,6 @@ button {
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
-    background-color: #1a1a1a;
     cursor: pointer;
     transition: border-color 0.25s;
 }
@@ -74,4 +71,7 @@ button:focus-visible {
     button {
         background-color: #f9f9f9;
     }
+}
+.ant-form-item-row .ant-col-14 {
+    max-width: 100%;
 }
